<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="@dimen/padding_left"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_inv_name"
                android:hint="@string/hint_inv_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                tools:text="Name:"/>
            <EditText
                android:id="@+id/edit_inv_price"
                android:hint="@string/hintinv_price"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                tools:text="Price:"/>
            <EditText
                android:id="@+id/edit_inv_qty"
                android:hint="@string/hint_inv_qty"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                tools:text="Quantity"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
