<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding"/>
    <RelativeLayout
        android:id= "@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/empty_inv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/supply"/>
            <TextView
                android:id="@+id/empty_inv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_inv_image"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="@dimen/padding"
                android:text="@string/empty_inv_name"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:id="@+id/empty_inv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_inv_name"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:paddingTop="8dp"
                android:text="@string/empty_inv_price"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#A2AAB0"/>
            <TextView
                android:id="@+id/empty_inv_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_inv_price"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:paddingTop="8dp"
                android:text="@string/empty_inv_qty"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#A2AAB0"/>
            <TextView
                android:id="@+id/empty_inv_sup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_inv_qty"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:paddingTop="8dp"
                android:text="@string/empty_inv_sup"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#A2AAB0"/>
    </RelativeLayout>
    <android.support.design.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/margin"
        android:src="@drawable/add_icon"/>
</RelativeLayout>